# wasmer-integration-tests

./: .env  .env.dev  .env.local  .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CDN-TESTS.md  Cargo.toml  Dockerfile  Makefile  README.md  autobuild.test.ts  deno.json  docker-compose.local-platform.yaml  docker-compose.yml  flake.nix  jest-global-setup.ts  jest-logging-config.ts  jest.config.js  job.test.ts  local.env.example  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.sh  test.ts  tests.ts  tsconfig.json  vector.yaml  wordpress.test.ts
.github/: integration-test-suites.json
.github/workflows/: ci.yaml  code-qa.yaml  deployment-superpanic.yaml  integraiton-tests.yml  integration-test-workflow.yaml  local-platform-suite.yaml  local-platform-test.yaml  nightly.yml  noop-reusable.yaml  purge-test-apps.yaml  push-to-main.yaml  run-against-prod.yaml  superpanic-tests.yaml  wasmer-cli.yaml
.zed/: settings.json
backend/: backend_entrypoint.sh  backend_fixtures.json  celery_entrypoint.sh  db.sqlite3  env
docs/: local-environment-v1.md
edge/: Dockerfile  download-latest-release.sh  pebble-config.json  platform_config_local.yaml
fixtures/: path-logger.php
fixtures/axum/: Cargo.toml  wasmer.toml
fixtures/echo-server/: app.yaml  wasmer.toml
fixtures/hello-world/: wasmer.toml
fixtures/php/: durable-counter.php
fixtures/php-extensions/: wasmer.toml
fixtures/php-instaboot-timestamp/: wasmer.toml
fixtures/python/: echo-server.py
fixtures/python/toolbox/: README.md  Shipit  pyproject.toml
fixtures/python/toolbox/src/: main.py
loadtest/: README.md
loadtest/wordpress/: README.md  wordpress-load-test.mjs
local-platform/: cli.py  lib.sh  package-compilation-list.txt  package-seed.txt
local-platform/edge-runtime/: Dockerfile
local-platform/localplatform/: __init__.py  bootstrap.py  cli.py  down.py  ensure_compiled.py  fetch.py  lib.py  local_test.py  logs.py  resolve.py  status.py  up.py
local-platform/loki/: local-config.yaml
local-platform/scripts/: bootstrap.sh  collect-logs.sh  down.sh  ensure-compiled.sh  fetch-artifacts.sh  generate-edge-config.mjs  local-test.sh  persist-relay-queries.mjs  prepare-test-environment.sh  print-logs.sh  resolve.sh  seed-app-templates.mjs  seed-packages.mjs  up.sh  wait-url.mjs
local-platform/vector/: vector.toml
repros/: WAX-600-edge-wasix-cross-store-panic.sh
scripts/: build.py  clear.py
src/: app.ts  backend.ts  convert.ts  deps.ts  edge.ts  env.ts  fs.ts  http.ts  index.ts  lib.rs  log.ts  package.ts  security.ts  ssh.ts  testing_tools.ts  util.ts  wasmer_cli.ts  wordpress.ts
src/app/: appGet.ts  construct.ts  index.ts  php.ts
src/tests/: log.test.ts
src/validation-tests/: README.md  log.test.ts  path-logger.php
tests/: app_types.rs  autobuild.test.ts  conftest.py  deploy_from_templates.rs  edge_behavior.rs  helpers.py  job.test.ts  mod.rs  php.rs  test.ts  test_app_info_get.py  test_app_list.py  test_fetching_fixture_packages.py  volumes.test.ts  wordpress.test.ts
tests/app/: app_banning.test.ts  be-1679-remote-build-alias-wipe.test.ts  cdn-cache.test.ts  instaboot.test.ts  python-compatibility.test.ts  python_compatability.test.ts  templates.test.ts
tests/autobuild/: autobuild.test.ts
tests/cli_actions/: app.rs  app_cache_purge.rs  app_create_templates.rs  deploy.rs  domain.rs  mod.rs  package_download.rs  publish.rs  run.rs  secrets.rs  ssh.rs
tests/deploy/: python.test.ts
tests/edge/: commands.sh  test_fixtures.py  test_http_gateway.py  test_restart_instance.py  test_ssh.py  test_winterjs.py
watest/: Cargo.toml
watest/src/: lib.rs  log  util.rs
watest/src/tests/: app_flow.rs  app_logging.rs  app_templates.rs  complex_load.rs  dns.rs  loadtest.js  mod.rs  networking.rs  unnamed_package.rs
watest/tests/: logging.rs
(+59 files in other folders)
