[tool.poetry]
name = "edge-backend-integration-tests"
version = "0.1.0"
description = "Integration tests between Backend and Edge using pytest"
authors = ["Ayush Jha <ayush@wasmer.io>"]
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-lazy-fixtures = "1.0.1"
pytest-depends = "1.0.1"
requests = "^2.31.0"
snapshottest = "^0.6.0"
toml = "^0.10.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
