[package]
name = "watest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.11.0"
futures = "0.3.30"
reqwest = { version = "0.11.24", default-features = false, features = ["stream", "rustls-tls"] }
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
time = { version = "0.3.34", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
wasmer-api = "0.0.23"
